[gd_scene load_steps=36 format=2]

[ext_resource path="res://Scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://Fonts/fonts/connection/Connection.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/fonts/xolonium/xolonium-fonts-4.1/ttf/Xolonium-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Images/el_12_03.png" type="Texture" id=4]
[ext_resource path="res://Images/button_02_01.png" type="Texture" id=5]
[ext_resource path="res://Images/frame_sl_03.png" type="Texture" id=6]
[ext_resource path="res://Images/frame_sl_02.png" type="Texture" id=7]
[ext_resource path="res://Images/el_12_01.png" type="Texture" id=8]
[ext_resource path="res://Fonts/fonts/xolonium/xolonium-fonts-4.1/ttf/Xolonium-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Images/button_02_03.png" type="Texture" id=10]
[ext_resource path="res://Images/button_02_02.png" type="Texture" id=11]
[ext_resource path="res://Images/button_02_04.png" type="Texture" id=12]
[ext_resource path="res://Images/button_02_05.png" type="Texture" id=13]
[ext_resource path="res://Scripts/ExitButtonContainer.gd" type="Script" id=14]
[ext_resource path="res://Images/Bars/LB_10_02.png" type="Texture" id=15]
[ext_resource path="res://Images/Bars/p_001.PNG" type="Texture" id=16]
[ext_resource path="res://Images/Bars/LB_10_03.png" type="Texture" id=17]
[ext_resource path="res://Images/Bars/LB_10_01.png" type="Texture" id=18]
[ext_resource path="res://Images/028.png" type="Texture" id=19]
[ext_resource path="res://Scripts/Resourse_update.gd" type="Script" id=20]
[ext_resource path="res://Images/004.png" type="Texture" id=21]
[ext_resource path="res://Images/094.png" type="Texture" id=22]
[ext_resource path="res://Images/030.png" type="Texture" id=23]
[ext_resource path="res://Images/010.png" type="Texture" id=24]
[ext_resource path="res://Images/008.png" type="Texture" id=25]
[ext_resource path="res://Scripts/BuildMenu.gd" type="Script" id=26]
[ext_resource path="res://Scripts/ResourseBar.gd" type="Script" id=27]

[sub_resource type="DynamicFont" id=1]
size = 37
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 27
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
size = 22
font_data = ExtResource( 9 )

[sub_resource type="Theme" id=6]

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 1584, 242 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 17 )
region_rect = Rect2( 0, 0, 1756, 393 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Border" type="Node" parent="."]

[node name="Corner" type="MarginContainer" parent="Border"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -459.0
margin_bottom = 459.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Corner" type="TextureRect" parent="Border/Corner"]
margin_right = 459.0
margin_bottom = 459.0
mouse_filter = 2
texture = ExtResource( 6 )

[node name="Corner2" type="MarginContainer" parent="Border"]
margin_right = 459.0
margin_bottom = 459.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Corner" type="TextureRect" parent="Border/Corner2"]
margin_right = 459.0
margin_bottom = 459.0
mouse_filter = 2
texture = ExtResource( 6 )
flip_h = true

[node name="Corner3" type="MarginContainer" parent="Border"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -459.0
margin_right = 459.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Corner" type="TextureRect" parent="Border/Corner3"]
margin_right = 459.0
margin_bottom = 459.0
mouse_filter = 2
texture = ExtResource( 6 )
flip_h = true
flip_v = true

[node name="Corner4" type="MarginContainer" parent="Border"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -459.0
margin_top = -459.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Corner" type="TextureRect" parent="Border/Corner4"]
margin_right = 459.0
margin_bottom = 459.0
mouse_filter = 2
texture = ExtResource( 6 )
flip_v = true

[node name="Edge" type="MarginContainer" parent="Border"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -515.0
margin_right = 505.0
margin_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Corner" type="TextureRect" parent="Border/Edge"]
margin_right = 1020.0
margin_bottom = 28.0
mouse_filter = 2
texture = ExtResource( 7 )
stretch_mode = 1

[node name="Edge2" type="MarginContainer" parent="Border"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -510.0
margin_top = -28.0
margin_right = 510.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Corner" type="TextureRect" parent="Border/Edge2"]
margin_right = 1020.0
margin_bottom = 28.0
mouse_filter = 2
texture = ExtResource( 7 )
stretch_mode = 1
flip_v = true

[node name="Edge3" type="MarginContainer" parent="Border"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = 217.0
margin_right = 459.0
margin_bottom = 245.0
grow_horizontal = 2
grow_vertical = 2
rect_rotation = -90.0
mouse_filter = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Corner" type="TextureRect" parent="Border/Edge3"]
margin_right = 459.0
margin_bottom = 28.0
mouse_filter = 2
texture = ExtResource( 7 )
stretch_mode = 1

[node name="Edge4" type="MarginContainer" parent="Border"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -262.0
margin_right = 459.0
margin_bottom = -234.0
grow_horizontal = 2
grow_vertical = 2
rect_rotation = 90.0
mouse_filter = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Corner" type="TextureRect" parent="Border/Edge4"]
margin_right = 459.0
margin_bottom = 28.0
mouse_filter = 2
texture = ExtResource( 7 )
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 136.0
margin_bottom = 92.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="MarginContainer"]
margin_right = 126.0
margin_bottom = 82.0

[node name="Label" type="Label" parent="MarginContainer/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Back"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsContainer" type="MarginContainer" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -399.0
margin_top = -411.0
margin_right = -29.0
margin_bottom = -31.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="StatsContainer"]
margin_right = 370.0
margin_bottom = 380.0
texture = ExtResource( 8 )
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="StatsContainer"]
margin_right = 370.0
margin_bottom = 380.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Planet_Stats" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1561.03
margin_top = 746.93
margin_right = -119.973
margin_bottom = -122.07
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Planet_Stats"]
margin_right = 238.0
margin_bottom = 211.0
alignment = 2

[node name="Type" type="Label" parent="Planet_Stats/VBoxContainer"]
margin_top = 76.0
margin_right = 245.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 2 )
text = "Type:"

[node name="Size" type="Label" parent="Planet_Stats/VBoxContainer"]
margin_top = 105.0
margin_right = 245.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 2 )
text = "Size Class:"

[node name="Civ_level" type="Label" parent="Planet_Stats/VBoxContainer"]
margin_top = 134.0
margin_right = 245.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 2 )
text = "Civilization Level:"

[node name="Tech_level" type="Label" parent="Planet_Stats/VBoxContainer"]
margin_top = 163.0
margin_right = 245.0
margin_bottom = 188.0
custom_fonts/font = SubResource( 2 )
text = "Tech Level:"

[node name="Tech" type="Label" parent="Planet_Stats/VBoxContainer"]
margin_top = 192.0
margin_right = 245.0
margin_bottom = 217.0
custom_fonts/font = SubResource( 2 )
text = "Tech Resourses:"

[node name="Resourse" type="Label" parent="Planet_Stats/VBoxContainer"]
margin_top = 221.0
margin_right = 245.0
margin_bottom = 246.0
custom_fonts/font = SubResource( 2 )
text = "Resourses:"

[node name="VBoxContainer2" type="VBoxContainer" parent="Planet_Stats"]
margin_right = 238.0
margin_bottom = 211.0

[node name="Name" type="Label" parent="Planet_Stats/VBoxContainer2"]
margin_right = 245.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 3 )
text = "Name:"
align = 1

[node name="ExitButtonContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -113.97
margin_top = 12.0
margin_right = -15.97
margin_bottom = 69.0
mouse_filter = 1
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="TextureRect" parent="ExitButtonContainer"]
margin_right = 98.0
margin_bottom = 57.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 1

[node name="ButtonContainer3" type="TextureRect" parent="ExitButtonContainer"]
margin_right = 98.0
margin_bottom = 57.0
mouse_filter = 2
texture = ExtResource( 11 )
expand = true
stretch_mode = 1

[node name="TextureButton" type="TextureButton" parent="ExitButtonContainer"]
margin_right = 98.0
margin_bottom = 57.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
expand = true

[node name="Label" type="Label" parent="ExitButtonContainer/TextureButton"]
anchor_right = 1.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 4 )
text = "Exit"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer2" type="TextureRect" parent="ExitButtonContainer"]
margin_right = 98.0
margin_bottom = 57.0
mouse_filter = 2
texture = ExtResource( 10 )
expand = true
stretch_mode = 1

[node name="BuildMenu" type="MarginContainer" parent="."]
margin_left = 21.0
margin_top = 1019.0
margin_right = 165.0
margin_bottom = 1059.0
mouse_filter = 1
script = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="TextureRect" parent="BuildMenu"]
margin_right = 144.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 1

[node name="ButtonContainer3" type="TextureRect" parent="BuildMenu"]
margin_right = 144.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 11 )
expand = true
stretch_mode = 1

[node name="TextureButton" type="TextureButton" parent="BuildMenu"]
margin_right = 144.0
margin_bottom = 40.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
expand = true

[node name="Label" type="Label" parent="BuildMenu/TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = "Build Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer2" type="TextureRect" parent="BuildMenu"]
margin_right = 144.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 10 )
expand = true
stretch_mode = 1

[node name="ButtonContainer3" type="MarginContainer" parent="."]
visible = false
margin_left = 36.0406
margin_top = 173.529
margin_right = 243.041
margin_bottom = 230.529
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="TextureRect" parent="ButtonContainer3"]
margin_right = 207.0
margin_bottom = 57.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 1

[node name="ButtonContainer3" type="TextureRect" parent="ButtonContainer3"]
margin_right = 207.0
margin_bottom = 57.0
mouse_filter = 2
texture = ExtResource( 11 )
expand = true
stretch_mode = 1

[node name="TextureButton" type="TextureButton" parent="ButtonContainer3"]
margin_right = 207.0
margin_bottom = 57.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
expand = true

[node name="ButtonContainer2" type="TextureRect" parent="ButtonContainer3"]
margin_right = 207.0
margin_bottom = 57.0
mouse_filter = 2
texture = ExtResource( 10 )
expand = true
stretch_mode = 1

[node name="ResourseBar" type="Control" parent="."]
anchor_right = 1.0
margin_left = -1.0
margin_right = -635.0
margin_bottom = 39.0
script = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Metal_ore" type="MarginContainer" parent="ResourseBar"]
anchor_right = 1.0
margin_left = 62.7593
margin_right = -1223.24
margin_bottom = 28.0
script = ExtResource( 20 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
type = "Metal_ore"

[node name="TextureRect3" type="TextureRect" parent="ResourseBar/Metal_ore"]
margin_bottom = 28.0
expand = true

[node name="ProgressBar" type="ProgressBar" parent="ResourseBar/Metal_ore/TextureRect3"]
margin_right = 256.0
margin_bottom = 38.0
theme = SubResource( 6 )
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
max_value = 10000.0
step = 1.0
value = 1001.0
allow_greater = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ResourseBar/Metal_ore/TextureRect3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 83.0
margin_top = -2.0
margin_right = 160.0
margin_bottom = 12.0
text = "1001/10000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ResourseBar/Metal_ore/TextureRect3"]
margin_left = -34.0
margin_top = 3.0
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ResourseBar/Metal_ore/TextureRect3/MarginContainer"]
margin_right = 34.0
margin_bottom = 35.0
texture = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ResourseBar/Metal_ore/TextureRect3/MarginContainer/TextureRect"]
margin_right = 34.0
margin_bottom = 35.0
texture = ExtResource( 19 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="ResourseBar/Metal_ore"]
visible = false
margin_bottom = 28.0
texture = ExtResource( 18 )
expand = true

[node name="Water" type="MarginContainer" parent="ResourseBar"]
anchor_right = 1.0
margin_left = 352.759
margin_right = -933.241
margin_bottom = 28.0
script = ExtResource( 20 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
type = "Water"

[node name="TextureRect3" type="TextureRect" parent="ResourseBar/Water"]
margin_bottom = 28.0
expand = true

[node name="ProgressBar" type="ProgressBar" parent="ResourseBar/Water/TextureRect3"]
margin_right = 256.0
margin_bottom = 38.0
theme = SubResource( 6 )
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
max_value = 10000.0
step = 1.0
value = 1001.0
allow_greater = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ResourseBar/Water/TextureRect3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 83.0
margin_top = -2.0
margin_right = 160.0
margin_bottom = 12.0
text = "1001/10000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ResourseBar/Water/TextureRect3"]
margin_left = -34.0
margin_top = 3.0
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ResourseBar/Water/TextureRect3/MarginContainer"]
margin_right = 34.0
margin_bottom = 35.0
texture = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ResourseBar/Water/TextureRect3/MarginContainer/TextureRect"]
margin_right = 34.0
margin_bottom = 35.0
texture = ExtResource( 21 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="ResourseBar/Water"]
visible = false
margin_bottom = 28.0
texture = ExtResource( 18 )
expand = true

[node name="Food" type="MarginContainer" parent="ResourseBar"]
anchor_right = 1.0
margin_left = 642.759
margin_right = -643.241
margin_bottom = 28.0
script = ExtResource( 20 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
type = "Food"

[node name="TextureRect3" type="TextureRect" parent="ResourseBar/Food"]
margin_bottom = 28.0
expand = true

[node name="ProgressBar" type="ProgressBar" parent="ResourseBar/Food/TextureRect3"]
margin_left = 1.0
margin_right = 257.0
margin_bottom = 38.0
theme = SubResource( 6 )
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
max_value = 10000.0
step = 1.0
value = 1001.0
allow_greater = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ResourseBar/Food/TextureRect3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 83.0
margin_top = -2.0
margin_right = 160.0
margin_bottom = 12.0
text = "1001/10000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ResourseBar/Food/TextureRect3"]
margin_left = -34.0
margin_top = 3.0
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ResourseBar/Food/TextureRect3/MarginContainer"]
margin_right = 34.0
margin_bottom = 35.0
texture = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ResourseBar/Food/TextureRect3/MarginContainer/TextureRect"]
margin_right = 34.0
margin_bottom = 35.0
texture = ExtResource( 23 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="ResourseBar/Food"]
visible = false
margin_bottom = 28.0
texture = ExtResource( 18 )
expand = true

[node name="Life" type="MarginContainer" parent="ResourseBar"]
anchor_right = 1.0
margin_left = 933.759
margin_right = -352.241
margin_bottom = 28.0
script = ExtResource( 20 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
type = "Life"

[node name="TextureRect3" type="TextureRect" parent="ResourseBar/Life"]
margin_bottom = 28.0
expand = true

[node name="ProgressBar" type="ProgressBar" parent="ResourseBar/Life/TextureRect3"]
margin_left = 1.0
margin_right = 257.0
margin_bottom = 38.0
theme = SubResource( 6 )
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
max_value = 10000.0
step = 1.0
value = 1001.0
allow_greater = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ResourseBar/Life/TextureRect3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 83.0
margin_top = -2.0
margin_right = 160.0
margin_bottom = 12.0
text = "1001/10000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ResourseBar/Life/TextureRect3"]
margin_left = -34.0
margin_top = 3.0
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ResourseBar/Life/TextureRect3/MarginContainer"]
margin_right = 34.0
margin_bottom = 35.0
texture = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ResourseBar/Life/TextureRect3/MarginContainer/TextureRect"]
margin_right = 34.0
margin_bottom = 35.0
texture = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="ResourseBar/Life"]
visible = false
margin_bottom = 28.0
texture = ExtResource( 18 )
expand = true

[node name="Tech" type="MarginContainer" parent="ResourseBar"]
anchor_right = 1.0
margin_left = 1224.76
margin_right = -61.2407
margin_bottom = 28.0
script = ExtResource( 20 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
type = "Tech"

[node name="TextureRect3" type="TextureRect" parent="ResourseBar/Tech"]
margin_bottom = 28.0
expand = true

[node name="ProgressBar" type="ProgressBar" parent="ResourseBar/Tech/TextureRect3"]
margin_left = 1.0
margin_right = 257.0
margin_bottom = 38.0
theme = SubResource( 6 )
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
max_value = 10000.0
step = 1.0
value = 1001.0
allow_greater = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ResourseBar/Tech/TextureRect3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 83.0
margin_top = -2.0
margin_right = 160.0
margin_bottom = 12.0
text = "1001/10000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ResourseBar/Tech/TextureRect3"]
margin_left = -34.0
margin_top = 3.0
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ResourseBar/Tech/TextureRect3/MarginContainer"]
margin_right = 34.0
margin_bottom = 35.0
texture = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ResourseBar/Tech/TextureRect3/MarginContainer/TextureRect"]
margin_right = 34.0
margin_bottom = 35.0
texture = ExtResource( 24 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="ResourseBar/Tech"]
visible = false
margin_bottom = 28.0
texture = ExtResource( 18 )
expand = true

[node name="Fuel" type="MarginContainer" parent="ResourseBar"]
anchor_right = 1.0
margin_left = 1515.76
margin_right = 229.759
margin_bottom = 28.0
script = ExtResource( 20 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
type = "Fuel"

[node name="TextureRect3" type="TextureRect" parent="ResourseBar/Fuel"]
margin_bottom = 28.0
expand = true

[node name="ProgressBar" type="ProgressBar" parent="ResourseBar/Fuel/TextureRect3"]
margin_left = 1.0
margin_right = 257.0
margin_bottom = 38.0
theme = SubResource( 6 )
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
max_value = 10000.0
step = 1.0
value = 1001.0
allow_greater = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ResourseBar/Fuel/TextureRect3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 83.0
margin_top = -2.0
margin_right = 160.0
margin_bottom = 12.0
text = "1001/10000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ResourseBar/Fuel/TextureRect3"]
margin_left = -34.0
margin_top = 3.0
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ResourseBar/Fuel/TextureRect3/MarginContainer"]
margin_right = 34.0
margin_bottom = 35.0
texture = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ResourseBar/Fuel/TextureRect3/MarginContainer/TextureRect"]
margin_right = 34.0
margin_bottom = 35.0
texture = ExtResource( 25 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="ResourseBar/Fuel"]
visible = false
margin_bottom = 28.0
texture = ExtResource( 18 )
expand = true

[connection signal="pressed" from="MarginContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ExitButtonContainer/TextureButton" to="ExitButtonContainer" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="BuildMenu/TextureButton" to="BuildMenu" method="_on_TextureButton_pressed"]
[connection signal="value_changed" from="ResourseBar/Metal_ore/TextureRect3/ProgressBar" to="ResourseBar/Metal_ore" method="_on_ProgressBar_value_changed"]
[connection signal="value_changed" from="ResourseBar/Water/TextureRect3/ProgressBar" to="ResourseBar/Water" method="_on_ProgressBar_value_changed"]
[connection signal="value_changed" from="ResourseBar/Food/TextureRect3/ProgressBar" to="ResourseBar/Food" method="_on_ProgressBar_value_changed"]
[connection signal="value_changed" from="ResourseBar/Life/TextureRect3/ProgressBar" to="ResourseBar/Life" method="_on_ProgressBar_value_changed"]
[connection signal="value_changed" from="ResourseBar/Tech/TextureRect3/ProgressBar" to="ResourseBar/Tech" method="_on_ProgressBar_value_changed"]
[connection signal="value_changed" from="ResourseBar/Fuel/TextureRect3/ProgressBar" to="ResourseBar/Fuel" method="_on_ProgressBar_value_changed"]
